--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,25 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -41,21 +26,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n115\", 5555)"
+    "ak.connect(\"n116\", 5555)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3dd41e",
+   "metadata": {},
+   "source": [
+    "### **Well-Connected Components**\n",
+    "\n",
+    "This implementation performs steps to ensure that every cluster/community from a given graph and clustering inputs are well-connected. Output files are automatically written to `arkouda-njit/arachne/output/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b36041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
+    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_post.tsv\"\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"post\")\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af06079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
+    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_during.tsv\"\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"during\")\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b9f4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
+    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_debug\"\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"debug\")\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "467b4a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/wiki_topcats_cleaned.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\")\n",
+    "outputPath = os.path.abspath(\"./output/\") + \"wiki_topcats_output.tsv\"\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath)\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath)\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
    ]
   },
   {
@@ -791,88 +847,6 @@
     "di = ar.diameter(G)\n",
     "print(f\"The diameter of karate is {di}\") "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee7ff40d",
-   "metadata": {},
-   "source": [
-    "### **Well-Connected Components**\n",
-    "\n",
-    "This implementation performs steps to ensure that every cluster/community from a given ggraph and clustering inputs are well-connected. Output files are automatically written to `arkouda-njit/arachne/output/`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "21750aa7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m network_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT1\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Create an undirected graph from the data\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m G \u001b[38;5;241m=\u001b[39m \u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas_edgelist\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnetwork_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msrc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_using\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGraph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Print the number of nodes and edges in the graph\u001b[39;00m\n\u001b[1;32m     14\u001b[0m num_nodes \u001b[38;5;241m=\u001b[39m G\u001b[38;5;241m.\u001b[39mnumber_of_nodes()\n",
-      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/utils/backends.py:412\u001b[0m, in \u001b[0;36m_dispatch.__call__\u001b[0;34m(self, backend, *args, **kwargs)\u001b[0m\n\u001b[1;32m    409\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m/\u001b[39m, \u001b[38;5;241m*\u001b[39margs, backend\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    410\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m backends:\n\u001b[1;32m    411\u001b[0m         \u001b[38;5;66;03m# Fast path if no backends are installed\u001b[39;00m\n\u001b[0;32m--> 412\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morig_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    414\u001b[0m     \u001b[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001b[39;00m\n\u001b[1;32m    415\u001b[0m     backend_name \u001b[38;5;241m=\u001b[39m backend\n",
-      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/convert_matrix.py:435\u001b[0m, in \u001b[0;36mfrom_pandas_edgelist\u001b[0;34m(df, source, target, edge_attr, create_using, edge_key)\u001b[0m\n\u001b[1;32m    432\u001b[0m g \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mempty_graph(\u001b[38;5;241m0\u001b[39m, create_using)\n\u001b[1;32m    434\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m edge_attr \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 435\u001b[0m     \u001b[43mg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_edges_from\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43msource\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    436\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m g\n\u001b[1;32m    438\u001b[0m reserved_columns \u001b[38;5;241m=\u001b[39m [source, target]\n",
-      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/networkx/classes/graph.py:1039\u001b[0m, in \u001b[0;36mGraph.add_edges_from\u001b[0;34m(self, ebunch_to_add, **attr)\u001b[0m\n\u001b[1;32m   1037\u001b[0m datadict\u001b[38;5;241m.\u001b[39mupdate(dd)\n\u001b[1;32m   1038\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_adj[u][v] \u001b[38;5;241m=\u001b[39m datadict\n\u001b[0;32m-> 1039\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_adj[v][u] \u001b[38;5;241m=\u001b[39m datadict\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "cluster_dict = {}\n",
-    "\n",
-    "\n",
-    "# Read the TSV file using pandas\n",
-    "network_df = pd.read_csv(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/wiki_topcats_cleaned.tsv\", sep=\"\\t\", header=None, names=[\"src\", \"dst\"])\n",
-    "network_df['type'] = 'T1'\n",
-    "\n",
-    "# Create an undirected graph from the data\n",
-    "G = nx.from_pandas_edgelist(network_df, source='src', target='dst', create_using=nx.Graph())\n",
-    "\n",
-    "# Print the number of nodes and edges in the graph\n",
-    "num_nodes = G.number_of_nodes()\n",
-    "num_edges = G.number_of_edges()\n",
-    "print(f\"Graph has {num_nodes} nodes and {num_edges} edges.\")\n",
-    "\n",
-    "\n",
-    "# Create an Arachne Graph.\n",
-    "ar_network_graph = ar.Graph()\n",
-    "ar_network_graph.add_edges_from(ak.array(network_df[\"src\"]), ak.array(network_df[\"dst\"]))\n",
-    "\n",
-    "filePath = \"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\"\n",
-    "print(\"Running Arachne...\") \n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"/scratch/users/md724/DataSets/UIUC/wccOutPut\")\n",
-    "# Function to extract information\n",
-    "def extract_cluster_info(cluster_array):\n",
-    "    cluster_info = []\n",
-    "    for i in range(0, len(cluster_array), 3):\n",
-    "        cluster_id = cluster_array[i]\n",
-    "        depth = cluster_array[i+1]\n",
-    "        members = cluster_array[i+2]\n",
-    "        cluster_info.append({\n",
-    "            'cluster_id': cluster_id,\n",
-    "            'depth': depth,\n",
-    "            'members': members\n",
-    "        })\n",
-    "    return cluster_info\n",
-    "\n",
-    "# Extract information\n",
-    "info = extract_cluster_info(clusters)\n",
-    "print(\"and it returned these WCC Clusters:\")\n",
-    "# Print the extracted information\n",
-    "for cluster in info:\n",
-    "    print(f\"Cluster ID: {cluster['cluster_id']}, Depth: {cluster['depth']}, Members: {cluster['members']}\")\n",
-    "#print(\"clusters = \", clusters)\n",
-    "#print(\"clusters.size = \", clusters.size)\n",
-    "ak.shutdown()"
-   ]
   }
  ],
  "metadata": {
@@ -891,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
