fixed initializer intent

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -26,13 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n32\", 5555)"
+    "ak.connect(\"n116\", 5555)"
    ]
   },
   {
@@ -47,10 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "86b36041",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  None\n",
+      "Number of clusters processed =  19\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
@@ -63,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cbf9e55d",
    "metadata": {},
    "outputs": [],
@@ -74,10 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "467b4a78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  None\n",
+      "Number of clusters processed =  15114\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
     "filePath = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\")\n",
