--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,25 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -41,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -55,7 +40,7 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n116\", 5555)"
+    "ak.connect(\"n34\", 5555)"
    ]
   },
   {
@@ -70,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "86b36041",
    "metadata": {},
    "outputs": [
@@ -78,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/test_network_output_post.tsv\n",
-      "Number of clusters processed =  19\n"
+      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/generated_cluster_post.tsv\n",
+      "Number of clusters processed =  18\n"
      ]
     }
    ],
@@ -88,80 +73,90 @@
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
-    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_post.tsv\"\n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"post\")\n",
-    "print(\"Number of clusters processed = \", clusters.size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2af06079",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/test_network_output_during.tsv\n",
-      "Number of clusters processed =  19\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
-    "\n",
-    "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
-    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_during.tsv\"\n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"during\")\n",
-    "print(\"Number of clusters processed = \", clusters.size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e5b9f4b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/test_network_output_debug\n",
-      "Number of clusters processed =  19\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
-    "\n",
-    "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
-    "outputPath = os.path.abspath(\"./output/\") + \"/test_network_output_debug\"\n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath, \"debug\")\n",
+    "filePath = os.path.abspath(\"./data/wcc/test_clustering.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"post\")\n",
     "print(\"Number of clusters processed = \", clusters.size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "467b4a78",
+   "id": "2af06079",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/wiki_topcats_cleaned.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "filePath = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\")\n",
-    "outputPath = os.path.abspath(\"./output/\") + \"wiki_topcats_output.tsv\"\n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath)\n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, outputPath)\n",
+    "filePath = os.path.abspath(\"./data/wcc/test_clustering.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"during\")\n",
     "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b9f4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/test_clustering.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"debug\")\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b988454",
+   "metadata": {},
+   "source": [
+    "### **Connected Components**\n",
+    "\n",
+    "Given a graph G, (as defined above) if there is a path from a vertex $u$ to every other vertex $v$ then the graph is said to be connected. If there is not a path, then the graph is said to be disconnected and composed of multiple connected components. There may be a large number of connected components of varying sizes in a graph.\n",
+    "\n",
+    "One of the most ancient manners of calculating connected components involve running BFS until every vertex has been visited, at every iteration looking for the node whose value `-1` and start BFS from it. These steps are repeated until all the vertices have been labeled. The other is using union-find to build a tree induced by each connected component. For our method we use a lbel propagation technique that sends the minimum vertex label to all the other vertices in a connected component.\n",
+    "\n",
+    "To run our connected components, you just have to call the `connected_components()` method. **We use a randomly generated graph for this example**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3aca456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmat_graph = ar.rmat(15, create_using=ar.Graph)\n",
+    "cc = ar.connected_components(rmat_graph)\n",
+    "print(cc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12c2f6bc",
+   "metadata": {},
+   "source": [
+    "We can use Arkouda methods to get the size of each component in our file. This will let us know which vertices will be included in the induced subgraph of the largest component."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "474af8ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = ak.GroupBy(cc)\n",
+    "keys, count = g.size()\n",
+    "label_of_largest_component = ak.argmax(count)\n",
+    "label_of_smallest_component = ak.argmin(count)\n",
+    "print(f\"The largest component is labeled: {keys[label_of_largest_component]}\")\n",
+    "print(f\"The smallest component is labeled: {keys[label_of_smallest_component]}\")"
    ]
   },
   {
@@ -175,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4b6a0f2f",
    "metadata": {},
    "outputs": [],
@@ -205,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "47d13bbc",
    "metadata": {},
    "outputs": [],
@@ -218,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "5d0712b5",
    "metadata": {},
    "outputs": [],
@@ -236,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "9c9b38b7",
    "metadata": {},
    "outputs": [],
@@ -247,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "af0f2c50",
    "metadata": {},
    "outputs": [],
@@ -278,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ca0bbe6e",
    "metadata": {},
    "outputs": [],
@@ -289,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e94bf24e",
    "metadata": {},
    "outputs": [],
@@ -301,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "5dc37703",
    "metadata": {},
    "outputs": [],
@@ -317,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "d849d4ce",
    "metadata": {},
    "outputs": [],
@@ -347,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "56581839",
    "metadata": {},
    "outputs": [],
@@ -367,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "2343803e",
    "metadata": {},
    "outputs": [],
@@ -379,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "94b1b23a",
    "metadata": {},
    "outputs": [],
@@ -416,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "61aa774c",
    "metadata": {},
    "outputs": [],
@@ -618,54 +613,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "056f8568",
-   "metadata": {},
-   "source": [
-    "### **Connected Components**\n",
-    "\n",
-    "Given a graph G, (as defined above) if there is a path from a vertex $u$ to every other vertex $v$ then the graph is said to be connected. If there is not a path, then the graph is said to be disconnected and composed of multiple connected components. There may be a large number of connected components of varying sizes in a graph.\n",
-    "\n",
-    "One of the most ancient manners of calculating connected components involve running BFS until every vertex has been visited, at every iteration looking for the node whose value `-1` and start BFS from it. These steps are repeated until all the vertices have been labeled. The other is using union-find to build a tree induced by each connected component. For our method we use a lbel propagation technique that sends the minimum vertex label to all the other vertices in a connected component.\n",
-    "\n",
-    "To run our connected components, you just have to call the `connected_components()` method. **We use one of the randomly generated graphs above for this example**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab22ea5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cc = ar.connected_components(rmat_graph)\n",
-    "print(cc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a9dfc0a",
-   "metadata": {},
-   "source": [
-    "We can use Arkouda methods to get the size of each component in our file. This will let us know which vertices will be included in the induced subgraph of the largest component."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3affcb7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = ak.GroupBy(cc)\n",
-    "keys, count = g.size()\n",
-    "label_of_largest_component = ak.argmax(count)\n",
-    "label_of_smallest_component = ak.argmin(count)\n",
-    "print(f\"The largest component is labeled: {keys[label_of_largest_component]}\")\n",
-    "print(f\"The smallest component is labeled: {keys[label_of_smallest_component]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e26d4aab",
    "metadata": {},
    "source": [
@@ -834,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "7fd4d820",
    "metadata": {},
    "outputs": [],
@@ -846,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "999dfc01",
    "metadata": {},
    "outputs": [],
@@ -859,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "36d90c88",
    "metadata": {},
    "outputs": [],
