fixed cc in wcc

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -26,18 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n34\", 5555)"
@@ -55,19 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "c0e2912f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_1.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/test_clustering_simple_1.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"post\")\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "86b36041",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/generated_cluster_post.tsv\n",
-      "Number of clusters processed =  18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
