Conductance, Kcore, Spectral structure, and more

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -10,55 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f651e065",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    }
-   ],
-   "source": [
-    "import arkouda as ak\n",
-    "import arachne as ar\n",
-    "import scipy as sp\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "671cb378",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
-   "source": [
-    "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n34\", 5555)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3b3dd41e",
    "metadata": {},
@@ -76,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ec8e86aa",
    "metadata": {},
    "outputs": [
@@ -84,17 +35,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
-      "WCC found 3 clusters to be well-connected.\n"
+      "WCC found 6 clusters to be well-connected.\n"
      ]
     }
    ],
    "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
+    "ak.connect(\"n115\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
     "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3.tsv\")\n",
+    "output_path = os.path.abspath(\"./output/\")\n",
+    "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
+    "\n",
+    "criterion_variations = [\"log10\"]\n",
+    "\n",
+    "for variant in criterion_variations:\n",
+    "    curr_output_filename = variant + output_filename\n",
+    "    num_clusters = ar.well_connected_components(ar_network_graph, file_path, output_path, \n",
+    "                                                output_filename=curr_output_filename,\n",
+    "                                                output_type = \"post\",\n",
+    "                                                connectedness_criterion = variant,\n",
+    "                                                connectedness_criterion_mult_value = 0.05,\n",
+    "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
+    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83686037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
+    "ak.connect(\"n34\", 5555)\n",
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3_longpath.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3_longpath.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
@@ -126,7 +142,7 @@
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
-    "criterion_variations = [\"log10\", \"log2\", \"sqrt\", \"mult\"]\n",
+    "criterion_variations = [\"log10\"]\n",
     "\n",
     "for variant in criterion_variations:\n",
     "    curr_output_filename = variant + output_filename\n",
@@ -262,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4b6a0f2f",
    "metadata": {},
    "outputs": [],
@@ -292,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "47d13bbc",
    "metadata": {},
    "outputs": [],
@@ -305,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5d0712b5",
    "metadata": {},
    "outputs": [],
@@ -323,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9c9b38b7",
    "metadata": {},
    "outputs": [],
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "af0f2c50",
    "metadata": {},
    "outputs": [],
@@ -365,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ca0bbe6e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e94bf24e",
    "metadata": {},
    "outputs": [],
@@ -388,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5dc37703",
    "metadata": {},
    "outputs": [],
@@ -404,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d849d4ce",
    "metadata": {},
    "outputs": [],
@@ -434,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "56581839",
    "metadata": {},
    "outputs": [],
@@ -454,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2343803e",
    "metadata": {},
    "outputs": [],
@@ -466,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "94b1b23a",
    "metadata": {},
    "outputs": [],
@@ -503,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "61aa774c",
    "metadata": {},
    "outputs": [],
@@ -873,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "7fd4d820",
    "metadata": {},
    "outputs": [],
@@ -885,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "999dfc01",
    "metadata": {},
    "outputs": [],
@@ -898,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "36d90c88",
    "metadata": {},
    "outputs": [],
